--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>STIFF | Creative Direction & Digital Craft</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>NATHAN NGUYEN | Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&family=Playfair+Display:ital,wght@0,700;1,700&display=swap"
       rel="stylesheet"
@@ -70,17 +69,20 @@
         pointer-events: none;
         z-index: 10000;
         transition: transform 0.15s ease-out, opacity 0.3s ease;
-        mix-blend-difference: difference;
+        mix-blend-mode: difference;
       }
       .custom-cursor-follower {
         width: 40px;
         height: 40px;
-        border: 1px solid rgba(255, 255, 255, 0.3);
+        border: 1px solid #ffffff4d;
         border-radius: 50%;
         position: fixed;
         pointer-events: none;
         z-index: 9999;
         transition: transform 0.3s ease-out;
+      }
+      html[data-theme='light'] .custom-cursor {
+        background: #ffffff4d;
       }
       .hover-active .custom-cursor {
         transform: scale(4);
